force-app/main/default/objects/HistoricoEstoque__c/HistoricoEstoque__c.object-meta.xml
<CustomObject>
    <label>Histórico de Estoque</label>
    <nameField>
        <displayFormat>HIST-{00000}</displayFormat>
        <label>Número do Histórico</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos de Estoque</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>