force-app/main/default/objects/HistoricoEstoque__c/fields/Data_Movimentacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Movimentacao__c</fullName>
    <label>Data da Movimentação</label>
    <type>DateTime</type>
</CustomField>