force-app/main/default/objects/HistoricoEstoque__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Produto__c</referenceTo>
    <relationshipLabel>Históricos de Estoque</relationshipLabel>
    <relationshipName>Historicos_Estoque</relationshipName>
    <type>Lookup</type>
</CustomField>