force-app/main/default/objects/HistoricoEstoque__c/fields/Tipo_Movimentacao__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Movimentacao__c</fullName>
    <label>Tipo de Movimentação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entrada</fullName>
            </value>
            <value>
                <fullName>Saída</fullName>
            </value>
            <value>
                <fullName>Ajuste</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>