force-app/main/default/objects/HistoricoEstoque__c/fields/Usuario_Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuário Responsável</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Históricos de Estoque</relationshipLabel>
    <relationshipName>Historicos_Estoque_Responsavel</relationshipName>
    <type>Lookup</type>
</CustomField>